tests/snapshots/examples_fixtures/type_system__failing__97_hm_fun_return_mismatch_contextual.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/97_hm_fun_return_mismatch_contextual.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Function return types do not match: expected `Int`, found `String`.

  --> examples/type_system/failing/97_hm_fun_return_mismatch_contextual.flx:11:14
   |
11 |     let _f = if true {
   |              ^^^^^^^^^
12 |         ret_int
   | ^^^^^^^^^^^^^^^
13 |     } else {
   | ^^^^^^^^^^^^
14 |         ret_string
   | ^^^^^^^^^^^^^^^^^^
15 |     }
   | ^^^^^
== stdout ==
<not executed>
